--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
+<!-- save as index.html -->
+
 <html>
 
 <head>
 	<title>Home Page</title>
 </head>
 <body>
+	<p>
+		<img src="https://s-media-cache-ak0.pinimg.com/originals/79/28/aa/7928aacc6b9a8b607621fbeb7593ea82.png" width="450" height="300"/>
+	</p>
+
+
 	<p> Link to practice page</p>
 	<a href="practicePer1.html"> Practice Page</a>
 </body>
