--- a/practicePer1.html
+++ b/practicePer1.html
@@ -17,8 +17,16 @@
 	
 	<p>Hello Ravens find a link
 that you like in google.
-	<a href="http://www.denverbroncos.com/"> Denver Broncos </a>
-
+		<a href="http://www.denverbroncos.com/"> Denver Broncos </a>
+	
+	</p>
+	
+	<p>
+		<a href="index.html"> Home Page </a>
+	</p>
+	
+	<p>
+		<img src="http://prod.static.broncos.clubs.nfl.com/nfl-assets/img/gbl-ico-team/DEN/logos/home/large.png" width="150" height="100"   />
 	</p>
 
 
