added picture of cat

--- a/practicePer2.html
+++ b/practicePer2.html
@@ -16,5 +16,8 @@
 	<h6>tiny</h6>
 	
 	<p> Stay cool today</p>
+	
+	<img src="https://pbs.twimg.com/profile_images/378800000532546226/dbe5f0727b69487016ffd67a6689e75a.jpeg" width="150" height="100" />
+	
 </body>
 </html>
