added images folder and cat pic

--- a/practicePer2.html
+++ b/practicePer2.html
@@ -19,5 +19,12 @@
 	
 	<img src="https://pbs.twimg.com/profile_images/378800000532546226/dbe5f0727b69487016ffd67a6689e75a.jpeg" width="150" height="100" />
 	
+	
+	<p>
+		<img src="images/tiny_cat.jpg" width="370" height="245"/>
+	</p>
+	
+	
+	
 </body>
 </html>
