update image link

--- a/practicePer2.html
+++ b/practicePer2.html
@@ -21,7 +21,7 @@
 	
 	
 	<p>
-		<img src="images/tiny_cat.jpg" width="370" height="245"/>
+		<img src="mremington.github.io/images/tiny_cat.jpg" width="370" height="245"/>
 	</p>
 	
 	
