--- a/bestMovie.html
+++ b/bestMovie.html
@@ -4,20 +4,24 @@
 
 <head>
 	<title>My Favorite Movie</title>
-</head
-<body>
-<h1>Remember The Titans</h1> 
-<img src="http://www.asset1.net/tv/pictures/movie/remember-the-titans-2000/Remember-the-Titans-DI.jpg" width="400" height="300"/>
-<p>
-	<a href="http://movies.disney.com/remember-the-titans">Movie Information Link</a>
-</p>
+</head>
 
-<h2> Why I like the movie</h2>
+<body style="background-color:green;">
 
-<p> This movie makes me think of the times when I played football and how I enjoyed spending time playig the game with my teammates and friends.  I enjoy the story and really like the lessons that can be learned from how people may have lived in that time.</p>
+	<h1 style="color:blue;">Remember The Titans</h1> 
+	
+	<img src="http://www.asset1.net/tv/pictures/movie/remember-the-titans-2000/Remember-the-Titans-DI.jpg" width="400" height="300"/>
+	
+	<p>
+		<a href="http://movies.disney.com/remember-the-titans">Movie Information Link</a>
+	</p>
 
-<h2> Favorite Actor</h2>
-<p> My favorite actor in this movie an many others is Denzel Washington. Denzel has a great talent to become his role and bring the audience along for the ride.<p/>
+	<h2> Why I like the movie</h2>
+
+	<p> This movie makes me think of the times when I played football and how I enjoyed spending time playig the game with my teammates and friends.  I enjoy the story and really like the lessons that can be learned from how people may have lived in that time.</p>
+
+	<h2> Favorite Actor</h2>
+	<p> My favorite actor in this movie an many others is Denzel Washington. Denzel has a great talent to become his role and bring the audience along for the ride.<p/>
 
 </body>
 </html>
