--- a/bestMovie.html
+++ b/bestMovie.html
@@ -6,13 +6,13 @@
 	<title>My Favorite Movie</title>
 </head>
 
-<body style="background-color:green;">
+<body style="background-color:yellow;">
 
-	<h1 style="color:blue;">Remember The Titans</h1>      
+	<h1 style="color:blue; font-family:verdana; font-size:200%">Remember The Titans</h1>      
 	
 	<img src="http://www.asset1.net/tv/pictures/movie/remember-the-titans-2000/Remember-the-Titans-DI.jpg" width="400" height="300"/>
 	
-	<p>
+	<p style="color:blue; font-family:verdana;">
 		<a href="http://movies.disney.com/remember-the-titans">Movie Information Link</a>
 	</p>
 
