--- a/divTags.html
+++ b/divTags.html
@@ -32,7 +32,7 @@
 		
 		#mainHeader {
 			height: 185px;
-			background: url(images/logo.png) no-reat 25px center;
+			background: url(images/logo.png) no-repeat 25px center;
 			padding: 0 75px 0 300px;
 			position: relative;
 			border-bottom: 2px solid #7f7f7f;
@@ -73,7 +73,7 @@
 <div id="wrapper">
 
 	<!-- Page Header - Logo, Title, Links -->
-	<header id="mainHeader">
+	<div id="mainHeader">
 	
 		<h1>Exploring Computer Science</h1>
 		<h2>My Collection of Programming 
@@ -96,22 +96,22 @@
 			</ul>
 		</div><!-- end Navigation links -->
 
-	</header><!-- end header -->
+	</div><!-- end header -->
 	
 	<!-- Section Content - Project and Assignments -->
-	<section id="content">
+	<div id="content">
 		<p>Replace this text with Project and Assignment examples</p>
-	</section><!-- end Conent -->
+	</div><!-- end Conent -->
 	
 	<!-- Aside Content - Hobbies & Interests -->
-	<aside id="hobbies">
+	<div id="hobbies">
 		<p>Place things you like here, photos, links, videos, etc.</p>
-	</aside><!-- end Hobbies -->
+	</div><!-- end Hobbies -->
 	
 	<!-- Footer Content -->
-	<footer id="pageFooter">
+	<div id="pageFooter">
 		<p>author, contact, copy rights</p>
-	</footer><!-- end Footer -->
+	</div><!-- end Footer -->
 
 </div><!-- end Wrapper -->
 
