--- a/scratch.html
+++ b/scratch.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Mr Remington's Portfolio</title>
+	<title>Scratch Page</title>
 	<link href="main.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -43,7 +43,7 @@
 	
 	<!-- Section Content -->
 	<section id="content">
-		<h2>Personal Interest Conent</h2>
+		<h2>Scratch Content</h2>
 		<p>Replace this text with project and assignment examples</p>
 	</section><!-- end Content -->
 	
