--- a/tablesPer2.html
+++ b/tablesPer2.html
@@ -13,7 +13,7 @@
 	<table border="1" width="100%">
 		<!-- row 1 -->
 		<tr height="150">
-			<td colspan="2">Title</td>
+			<td colspan="4">Title</td>
 			<!-- <td>logo</td> -->
 		</tr>
 		
@@ -25,8 +25,8 @@
 		
 		<!-- row 3 -->
 		<tr height="100">
-			<td>Row 3 Col 1</td>
-			<td>Row 3 Col 2</td>
+			<td colspan="4">Row 3 Col 1</td>
+			
 		</tr>
 	
 	</table>
