update portfolio files

--- a/scratch.html
+++ b/scratch.html
@@ -6,59 +6,88 @@
 	<meta charset="UTF-8">
 	<title>Scratch Page</title>
 	<link href="main.css" rel="stylesheet" type="text/css">
+	
 </head>
 
 <body>
 
-<!-- Page Content wrapper -->
+<!-- Page Content Wrapper -->
 <div id="wrapper">
 
-	<!-- page header - logo, title, links -->
+	<!-- Page Header - Logo, Title, Links -->
 	<header id="mainHeader">
+	
 		<h1>Exploring Computer Science</h1>
-		<h2>My Collection of Programming Projects and Assignments</h2>
-		
+		<h2>My Collection of Programming 
+			Projects and Assignments</h2>
 		<!-- site Navigation links -->
 		<div id="mainNav">
 			<ul id="pages">
-				<li>
-					<a href="scratch.html">Scratch</a>
+				<li> 
+					<a href="scratch.html">Scratch</a>	
 				</li>
-				<li>
-					<a href="python.html">Python</a>
+				<li> 
+					<a href="python.html">Python</a>	
 				</li>
-				<li>
-					<a href="java.html">Java</a>
+				<li> 
+					<a href="java.html">Java</a>	
 				</li>
-				<li>
-					<a href="final.html">Final Project</a>
+				<li> 
+					<a href="final.html">Final Project</a>	
 				</li>
-				<li>
-					<a href="index.html">Home</a>
+				<li> 
+					<a href="index.html">Home Page</a>	
 				</li>
 			</ul>
 		</div><!-- end Navigation links -->
-		
+
 	</header><!-- end header -->
 	
-	<!-- Section Content -->
+	<!-- Section Content - Project and Assignments -->
 	<section id="content">
-		<h2>Scratch Content</h2>
-		<p>Replace this text with project and assignment examples</p>
-	</section><!-- end Content -->
+		
+		<h2>Name Assignment</h2>
+		<p>
+			<img src="images/nameAssignment.jpg" width="400" height="300"/>
+		</p>
+		<h2>Description:</h2>
+		<p> Use scratch to design and create a program that shows my name. The requirements were to add a sprite for each letter in my name and give them 3 unique behaviors.  The program needed to run when the green flag was clicked and for extra credit I added a function to reset the scene to the beginning each time the green flag was clicked.
+		</p>
+		<h2>Concepts Learned:</h2>
+		<ul>
+			<li>Using event blocks - green flag clicked, when key pressed</li>
+			<li>Conditional statements - used if statements to……</li>
+			<li>Used loops - I used a forever block to……, I used a repeat until block to…….</li>
+			<li>Sprites - I created my own sprites using the sprite editor,  I used the library of sprites to find letters in my name and adjusted the costumes, .....</li>
+			<li>Movement - I used the x and y values to make my sprites move to their original location when the green flag was clicked,  I rotated the sprites to …….</li>
+		</ul>
+		
+		<h2>Computer Buying Project</h2>
+		<p>
+			put image here
+		</p>
+		<h2>Description:</h2>
+		<h2>Concepts Learned</h2>
+		
+		<h2>Final Project</h2>
+		<p>
+			put image here
+		</p>
+		<h2>Description:</h2>
+		<h2>Concepts Learned</h2>
+	</section><!-- end Conent -->
 	
-	<!-- Aside Content -->
+	<!-- Aside Content - Hobbies & Interests -->
 	<aside id="hobbies">
-		<p>Place things you like here; photos, links, videos, etc.</p>
+		<p><img src="images/scratchLogo.png"/></p>
 	</aside><!-- end Hobbies -->
 	
 	<!-- Footer Content -->
 	<footer id="pageFooter">
-		<p>author, contact info, copyright</p>
+		<p>author, contact, copy rights</p>
 	</footer><!-- end Footer -->
-	
-</div><!-- end wrapper -->
 
+</div><!-- end Wrapper -->
 
 
 </body>
