--- a/java.html
+++ b/java.html
@@ -6,59 +6,60 @@
 	<meta charset="UTF-8">
 	<title>Java Page</title>
 	<link href="main.css" rel="stylesheet" type="text/css">
+	
 </head>
 
 <body>
 
-<!-- Page Content wrapper -->
+<!-- Page Content Wrapper -->
 <div id="wrapper">
 
-	<!-- page header - logo, title, links -->
+	<!-- Page Header - Logo, Title, Links -->
 	<header id="mainHeader">
+	
 		<h1>Exploring Computer Science</h1>
-		<h2>My Collection of Programming Projects and Assignments</h2>
-		
+		<h2>My Collection of Programming 
+			Projects and Assignments</h2>
 		<!-- site Navigation links -->
 		<div id="mainNav">
 			<ul id="pages">
-				<li>
-					<a href="scratch.html">Scratch</a>
+				<li> 
+					<a href="scratch.html">Scratch</a>	
 				</li>
-				<li>
-					<a href="python.html">Python</a>
+				<li> 
+					<a href="python.html">Python</a>	
 				</li>
-				<li>
-					<a href="java.html">Java</a>
+				<li> 
+					<a href="java.html">Java</a>	
 				</li>
-				<li>
-					<a href="final.html">Final Project</a>
+				<li> 
+					<a href="final.html">Final Project</a>	
 				</li>
-				<li>
-					<a href="index.html">Home</a>
+				<li> 
+					<a href="index.html">Home Page</a>	
 				</li>
 			</ul>
 		</div><!-- end Navigation links -->
-		
+
 	</header><!-- end header -->
 	
-	<!-- Section Content -->
+	<!-- Section Content - Project and Assignments -->
 	<section id="content">
 		<h2>Java Content</h2>
-		<p>Replace this text with project and assignment examples</p>
-	</section><!-- end Content -->
+		<p>Replace this text with Project and Assignment examples</p>
+	</section><!-- end Conent -->
 	
-	<!-- Aside Content -->
+	<!-- Aside Content - Hobbies & Interests -->
 	<aside id="hobbies">
-		<p>Place things you like here; photos, links, videos, etc.</p>
+		<p>Place things you like here, photos, links, videos, etc.</p>
 	</aside><!-- end Hobbies -->
 	
 	<!-- Footer Content -->
 	<footer id="pageFooter">
-		<p>author, contact info, copyright</p>
+		<p>author, contact, copy rights</p>
 	</footer><!-- end Footer -->
-	
-</div><!-- end wrapper -->
 
+</div><!-- end Wrapper -->
 
 
 </body>
