--- a/template.html
+++ b/template.html
@@ -4,66 +4,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Div Tag Template</title>
-	
-	<style>
-		body {
-			background: lightgreen;
-			font: 100% Georgia, Times, serif;
-		}
-		h1 {
-			font: 300% Arial, Helvetica, sans-serif;
-			color: grey;
-		}
-		h2 {
-			color: darkgreen;
-		}
-		p {
-			color: darkblue;
-		}
-		
-		#wrapper {
-			width: 1100px;
-			margin: 0 auto;
-			padding: 0 50px;
-			text-align: left;
-			position: relative;
-		}
-		
-		#mainHeader {
-			height: 185px;
-			background: url(images/logo.png) no-reat 25px center;
-			padding: 0 75px 0 300px;
-			position: relative;
-			border-bottom: 2px solid #7f7f7f;
-			margin-bottom: 16px;
-		}
-		#mainHeader div {
-			margin-top: 16px;
-		}
-		#mainHeader ul {
-			list-style: none;
-			float: left;
-		}
-		#mainHeader ul li {
-			float: left;
-		}
-		#mainHeader ul li a {
-			font-family: Arial, Helvetica, sans-serif;
-			font-size: 20px;
-			color: #000;
-			padding: 0 20px;
-			border-right: 1px solid #000;
-			text-decoration: none;
-		}
-		#mainHeader ul li a.last {
-			border-right: none;
-		}
-		#mainHeader ul li a:hover {
-			color: #c00000;
-		}
-	
-	</style>
+	<title>Template</title>
+	<link href="main.css" rel="stylesheet" type="text/css">
 	
 </head>
 
@@ -82,16 +24,19 @@
 		<div id="mainNav">
 			<ul id="pages">
 				<li> 
-					<a href="#">Scratch</a>	
+					<a href="scratch.html">Scratch</a>	
 				</li>
 				<li> 
-					<a href="#">Python</a>	
+					<a href="python.html">Python</a>	
 				</li>
 				<li> 
-					<a href="#">Java</a>	
+					<a href="java.html">Java</a>	
 				</li>
 				<li> 
-					<a href="#">Final Project</a>	
+					<a href="final.html">Final Project</a>	
+				</li>
+				<li> 
+					<a href="index.html">Home Page</a>	
 				</li>
 			</ul>
 		</div><!-- end Navigation links -->
