update movie and scratch files

--- a/newBestMovie.html
+++ b/newBestMovie.html
@@ -44,6 +44,9 @@
 		<p>
 			<a href="http://movies.disney.com/remember-the-titans">Movie Information Link</a>
 		</p>
+		<p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/guA_4AzXqh0" frameborder="0" allowfullscreen></iframe>
+		</p>
 	</aside><!-- end Hobbies -->
 	
 	<!-- Footer Content -->
