--- a/scratch.html
+++ b/scratch.html
@@ -80,7 +80,7 @@
 	<!-- Aside Content - Hobbies & Interests -->
 	<aside id="hobbies">
 		<p><img src="images/scratchLogo.png"/></p>
-		<p><iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/119395508/?autostart=false" frameborder="0" allowfullscreen></iframe>
+		<p><iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/119395508/?autostart=false" frameborder="0" allowfullscreen></iframe>
     </p>
 	</aside><!-- end Hobbies -->
 	
